--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,36 @@ image:
 - Ubuntu1804
 - Visual Studio 2017
 configuration: Release
-before_build:
-- ps: dotnet restore
-build:
-  project: EasyJsonT
-  parallel: true
-  verbosity: minimal
+clone_depth: 50
+
+for:
+-
+  matrix:
+    only:
+      - image: Visual Studio 2017
+  clone_folder: C:\projects\easyjsont\
+
+  before_build:
+  - ps: dotnet restore
+
+  build_script:
+  - ps: dotnet build -c Release
+
+  test_script:
+  - ps: dotnet test -c Release --no-build .\test\EasyJsonT.Test\EasyJsonT.Test.csproj
+
+-
+  matrix:
+    only:
+      - image: Ubuntu1804
+
+  clone_folder: /home/appveyor/projects/easyjsont
+
+  before_build:
+  - sh: dotnet restore
+  
+  build_script:
+  - ps: dotnet build -c Release
+  
+  test_script:
+  - ps: dotnet test -c Release --no-build ./test/EasyJsonT.Test/EasyJsonT.Test.csproj
